Changed version to 1.0

--- a/build.gradle
+++ b/build.gradle
@@ -2,7 +2,7 @@ apply plugin: 'java'
 apply plugin: 'maven'
 
 group 'se.fearless.kahluatest'
-version '1.0-SNAPSHOT'
+version '1.0'
 
 allprojects {
 	sourceCompatibility = 1.7
