--- a/build.gradle
+++ b/build.gradle
@@ -2,11 +2,11 @@ apply plugin: 'java'
 apply plugin: 'maven'
 
 group 'se.fearless.kahluatest'
-version '1.0'
+version '1.1'
 
 allprojects {
-	sourceCompatibility = 1.7
-	targetCompatibility = 1.7
+	sourceCompatibility = 1.8
+	targetCompatibility = 1.8
 }
 
 repositories {
@@ -22,6 +22,6 @@ repositories {
 
 dependencies {
 	compile 'junit:junit:4.12'
-	compile 'se.fearless.fearless-common:lua:1.0-SNAPSHOT'
+	compile 'se.fearless.fearless-common:lua:1.2'
 	testCompile 'se.mockachino:mockachino:0.7.1'
 }
